一応完成したはず？

--- a/BSAlarmClock/BSAlarmClock.csproj
+++ b/BSAlarmClock/BSAlarmClock.csproj
@@ -87,6 +87,11 @@
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+      <Private>False</Private>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
@@ -125,6 +130,7 @@
     <Compile Include="Installers\BSAlarmClockAppInstaller.cs" />
     <Compile Include="Installers\BSAlarmClockMenuInstaller.cs" />
     <Compile Include="Installers\BSAlarmClockPlayerInstaller.cs" />
+    <Compile Include="Models\AlarmSoundController.cs" />
     <Compile Include="Models\BSAlarmClockController.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Configuration\PluginConfig.cs" />
@@ -155,6 +161,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Alarm1.wav" />
+    <EmbeddedResource Include="Resources\Alarm2.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
