--- a/BSAlarmClock/manifest.json
+++ b/BSAlarmClock/manifest.json
@@ -2,12 +2,14 @@
   "$schema": "https://raw.githubusercontent.com/bsmg/BSIPA-MetadataFileSchema/master/Schema.json",
   "id": "BSAlarmClock",
   "name": "BSAlarmClock",
-  "author": "",
+  "author": "Rynan",
   "version": "0.0.1",
   "description": "",
   "gameVersion": "1.20.0",
   "dependsOn": {
     "BSIPA": "^4.2.2",
-    "SiraUtil": "^3.0.5"
+    "SiraUtil": "^3.0.5",
+    "BeatSaberMarkupLanguage": "^1.6.3",
+    "CameraUtils": "^1.0.1"
   }
 }
