--- a/BSAlarmClock/manifest.json
+++ b/BSAlarmClock/manifest.json
@@ -3,13 +3,13 @@
   "id": "BSAlarmClock",
   "name": "BSAlarmClock",
   "author": "Rynan",
-  "version": "0.0.1",
-  "description": "",
-  "gameVersion": "1.20.0",
+  "version": "0.0.2",
+  "description": "Freely placed alarm clock",
+  "gameVersion": "1.26.0",
   "dependsOn": {
     "BSIPA": "^4.2.2",
     "SiraUtil": "^3.0.5",
     "BeatSaberMarkupLanguage": "^1.6.3",
-    "CameraUtils": "^1.0.1"
+    "CameraUtils": "^1.0.0"
   }
 }
